```plantuml
@startuml UML - Classe - Modèle global

skinparam BackgroundColor white
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

left to right direction


' ========================================================
' COMPTES
' ========================================================

class Account {
    id: string
    email: string
    firstName: string
    lastName: string
}

class Candidate {
}

class User {
    role: string
}

Account <|-- Candidate
Account <|-- User


' ========================================================
' ENTREPRISE
' ========================================================

class Company {
    id: string
    name: string
}

Company "1" <-- "0..*" User : employees


' ========================================================
' CV
' ========================================================

class Resume {
    id: string
    analyzed: boolean
}

Candidate "1" *-- "0..*" Resume : resumes


' ========================================================
' COMPETENCES
' ========================================================

class Skill {
    id: string
    name: string
}

class CandidateSkill {
}

class JobOfferSkill {
}

Resume "1" *-- "0..*" CandidateSkill : skills

CandidateSkill "*" --> "1" Skill : skill


' ========================================================
' OFFRE
' ========================================================

class JobOffer {
    id: string
    title: string
    status: string
}


Company "1" <-- "0..*" JobOffer : offers

User "1" --> "0..*" JobOffer : creates


JobOffer "1" *-- "0..*" JobOfferSkill : skills
JobOfferSkill "*" --> "1" Skill : skill


' ========================================================
' CANDIDATURE
' ========================================================

class Application {
    id: string
    status: string
    matchScore: decimal
    appliedAt: DateTime
}

Candidate "1" --> "0..*" Application : applications

JobOffer "1" --> "0..*" Application : applications

Application "*" --> "1" Resume : uses


' ========================================================
' ENTRETIEN
' ========================================================

class Interview {
    id: string
    status: string
    startDate: DateTime
}

Application "1" *-- "0..*" Interview : interviews


' ========================================================
' NOTIFICATIONS
' ========================================================

class Notification {
    id: string
    type: string
    isRead: boolean
}

Account "1" <-- "0..*" Notification : receives


@enduml
```
